--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-animated-weather": "^4.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
     "react-native-responsive-screen": "^1.4.1",
     "react-scripts": "4.0.1",
     "react-tsparticles": "^1.18.11",
